--- a/src/app/web-app/resource/resource.component.html
+++ b/src/app/web-app/resource/resource.component.html
@@ -1,11 +1,5 @@
-<!-- <nav mat-tab-nav-bar>
-  <a mat-tab-link [routerLink]="'/web-app/resource/collections'">Collections</a>
-  <a mat-tab-link [routerLink]="'/web-app/resource/experiences'">Experiences</a>
-  <a mat-tab-link [routerLink]="'/web-app/resource/my-files'">My Files</a>
-</nav> -->
 <nav mat-tab-nav-bar>
-  <a mat-tab-link *ngFor="let link of links" (click)="activeLink = link.label" [active]="activeLink == link.label"
-    [routerLink]="link.link">
+  <a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.link" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
     {{link.label}}
   </a>
 </nav>
