--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -2,7 +2,7 @@
   <div class="row mt-3 mx-0">
     <!-- side -->
     <div class="side col-sm-2 files-side">
-      <ul class="list-unstyled mt-5">
+      <ul class="list-unstyled">
         <li class="pr-2 pl-3 rounded py-2 curs-ptr active"><i class="fas fa-folder mr-1"></i>My Files</li>
         <hr>
         <li class="pr-2 pl-3 rounded py-2 curs-ptr"><i class="fas fa-user-friends mr-1"></i>Shared with me</li>
@@ -14,7 +14,8 @@
         <div class="text-secondary text-center">
           3.3 MB of 2 GB used
           <div class="progress mt-2" style="height:10px;">
-            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="3" aria-valuemin="0" aria-valuemax="2048"></div>
+            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="3" aria-valuemin="0"
+              aria-valuemax="2048"></div>
           </div>
         </div>
       </div>
@@ -23,28 +24,19 @@
     <div class="col-sm-10">
       <h3 class="mb-4 clearfix heading align-self-center">
         <!-- My Files -->
-        <nav aria-label="breadcrumb" *ngIf="folderNav.length>0">
-          <ol class="breadcrumb bg-white mb-0 p-0">
-            <li class="breadcrumb-item" *ngFor="let flNav of folderNav;let i=index">
-              <span (click)="setSelFoldFiles(flNav)" *ngIf="folderNav.length-1>i">
-                {{flNav.name}}
-              </span>
-              <span *ngIf="folderNav.length-1<=i">
-                {{flNav.name}}
-              </span>
-            </li>
-          </ol>
-        </nav>
         <div class="float-right d-flex">
-          <i *ngIf="selFiles.length>0 || selFolders.length>0 || allFiles.length>0" class="fa mr-3 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}" (click)="switchView()"
-            matTooltip="{{view? 'List View' : 'Grid View'}}">
+          <i *ngIf="selFiles.length>0 || selFolders.length>0 || allFiles.length>0"
+            class="fa mr-3 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}"
+            (click)="switchView()" matTooltip="{{view? 'List View' : 'Grid View'}}">
           </i>
           <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               Add
             </button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="addBtnDD">
-              <a class="dropdown-item curs-ptr" (click)="openModal(fldrModal,'addFldr')"><i class="fas fa-folder-plus mr-1"></i>
+              <a class="dropdown-item curs-ptr" (click)="openModal(fldrModal,'addFldr')"><i
+                  class="fas fa-folder-plus mr-1"></i>
                 Create Folder
               </a>
               <a class="dropdown-item curs-ptr" (click)="openModal(addURL)"><i class="fa fa-link mr-1"></i>Add URL</a>
@@ -55,6 +47,18 @@
             </div>
           </div>
         </div>
+        <nav aria-label="breadcrumb" *ngIf="folderNav.length>0">
+          <ol class="breadcrumb bg-transparent pl-0 mb-0">
+            <li class="breadcrumb-item" *ngFor="let flNav of folderNav;let i=index">
+              <span class="curs-ptr text-hover" (click)="setSelFoldFiles(flNav)" *ngIf="folderNav.length-1>i">
+                {{flNav.name}}
+              </span>
+              <span *ngIf="folderNav.length-1<=i">
+                {{flNav.name}}
+              </span>
+            </li>
+          </ol>
+        </nav>
       </h3>
       <div *ngIf="view">
         <app-loader [type]="'page'" *ngIf="loading"></app-loader>
@@ -73,8 +77,10 @@
                   <div class="name align-self-center px-0"><i class="fas fa-folder mr-1"></i>{{fl.name}}</div>
                   <div class="d-flex p-0 __options ml-auto">
                     <div class="_options">
-                      <div class="btn btn-light btn-sm mr-1" (click)="$event.stopPropagation();setSelRow(fldrModal,fl);"><i class="fas fa-edit"></i></div>
-                      <div class="btn btn-light btn-sm mr-1" (click)="$event.stopPropagation();"><i class="fas fa-trash-alt"></i></div>
+                      <div class="btn btn-light btn-sm mr-1"
+                        (click)="$event.stopPropagation();setSelRow(fldrModal,fl);"><i class="fas fa-edit"></i></div>
+                      <div class="btn btn-light btn-sm mr-1" (click)="$event.stopPropagation();"><i
+                          class="fas fa-trash-alt"></i></div>
                     </div>
                     <mat-checkbox class="align-self-center" (click)="$event.stopPropagation();"></mat-checkbox>
                   </div>
@@ -93,16 +99,20 @@
                   </div>
                   <div class="options rounded">
                     <div class="dropleft">
-                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" (click)="$event.stopPropagation();">
+                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" (click)="$event.stopPropagation();">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
                         <h6 class="ml-2 text-white-50">External Sharing</h6>
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(email)"><i
+                            class="fa fa-envelope mr-1"></i>Email</a>
+                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(getLink)"><i
+                            class="fa fa-link mr-1"></i>Get a link</a>
                         <div class="dropdown-divider"></div>
                         <h6 class="ml-2 text-white-50">Internal Sharing</h6>
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(shareColl)"><i class="fa fa-user-friends mr-1"></i>Share
+                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(shareColl)"><i
+                            class="fa fa-user-friends mr-1"></i>Share
                           with
                           colleagues</a>
                       </div>
@@ -171,12 +181,15 @@
                 <td class="align-middle options">
                   <div class="d-flex">
                     <div class="dropleft">
-                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" (click)="$event.stopPropagation();openModal(getLink)">
+                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" (click)="$event.stopPropagation();openModal(getLink)">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
-                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a
+                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(email)"><i
+                            class="fa fa-envelope mr-1"></i>Email</a>
+                        <a class="dropdown-item" (click)="$event.stopPropagation();openModal(getLink)"><i
+                            class="fa fa-link mr-1"></i>Get a
                           link</a>
                       </div>
                     </div>
@@ -207,11 +220,14 @@
     <div class="selected-items text-secondary align-self-center">1 item selected</div>
     <div class="mr-1 ml-3 align-self-center">|</div>
     <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
-    <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</div>
-    <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get
+    <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openModal(email)"><i
+        class="fa fa-envelope mr-1"></i>Email</div>
+    <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i
+        class="fa fa-link mr-1"></i>Get
       a
       link</div>
-    <div class="btn btn-light align-self-center bg-white" (click)="openModal(addtoCollection)"><i class="fa fa-folder-plus mr-1"></i>Add to collection</div>
+    <div class="btn btn-light align-self-center bg-white" (click)="openModal(addtoCollection)"><i
+        class="fa fa-folder-plus mr-1"></i>Add to collection</div>
     <div class="btn btn-primary align-self-center"><i class="fas fa-trash-alt mr-1"></i>Delete</div>
   </div>
 
@@ -378,7 +394,8 @@
       </div>
       <div class="rounded border border-primary d-flex text-justify text-primary px-2 my-3 py-2">
         <i class="fa fa-info-circle align-self-center mr-2"></i>
-        File sharing is enabled for this file. Anyone at Hi-Force Hydraulic Tools with the file link will be able to view
+        File sharing is enabled for this file. Anyone at Hi-Force Hydraulic Tools with the file link will be able to
+        view
         this file.
       </div>
       <div *ngIf="sharingValue.checked">
@@ -410,7 +427,8 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-primary" (click)="modal.close('Save click')" [disabled]="!sharingValue.checked">Share</button>
+      <button type="button" class="btn btn-primary" (click)="modal.close('Save click')"
+        [disabled]="!sharingValue.checked">Share</button>
     </div>
   </ng-template>
 
