--- a/src/app/web-app/resource/exp/exp-list/exp-list.component.html
+++ b/src/app/web-app/resource/exp/exp-list/exp-list.component.html
@@ -1,18 +1,23 @@
+<app-loader [type]="'page'" *ngIf="loading"></app-loader>
 <!-- main -->
-<div class="main main-employee p-3 container mt-3">
+<div class="main main-employee p-3 container mt-3" *ngIf="wrkSpcs && !loading">
   <h3 class="mb-4 clearfix heading">
-    All Workspaces (5)
+    All Workspaces &#40;{{wrkSpcs.length}}&#41;
   </h3>
   <div class="mt-2 row workspaces">
-    <div class="card-container curs-ptr col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let t of temp;">
+    <div class="card-container curs-ptr col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0"
+      [routerLink]="'/web-app/resource/experiences/'+wrkspc.id" *ngFor="let wrkspc of wrkSpcs;">
       <div class="card overflow-hidden">
         <div class="card-body" style="background-image: url(assets/images/bg.jpg);">
           <img src="assets/images/logo.png" class="icon">
         </div>
         <div class="card-footer pt-4">
-          English
+          {{wrkspc.name}}
         </div>
       </div>
+    </div>
+    <div class="mx-auto mt-5 text-secondary" style="font-size: 20px;" *ngIf="wrkSpcs.length<=0">
+      No Workspaces Found
     </div>
   </div>
 </div>
