--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -759,7 +759,7 @@
             </mat-checkbox>
           </div>
         </div>
-        <div class="dropdown mr-2 mb-1">
+        <!-- <div class="dropdown mr-2 mb-1">
           <button class="btn btn-light dropdown-toggle" id="propDD" data-toggle="dropdown">
             Property
           </button>
@@ -768,7 +768,7 @@
             <mat-checkbox class="dropdown-item" *ngFor="let p of props" [attr.id]="p.id">{{p.name}}
             </mat-checkbox>
           </div>
-        </div>
+        </div> -->
         <div class="dropdown mr-2 mb-1">
           <button class="btn btn-light dropdown-toggle" id="tagsDD" data-toggle="dropdown">
             Tags
@@ -789,7 +789,7 @@
             </mat-form-field>
           </div>
         </div>
-        <div class="dropdown mr-2 mb-1">
+        <!-- <div class="dropdown mr-2 mb-1">
           <button class="btn btn-light dropdown-toggle" id="localeDD" data-toggle="dropdown">
             Locale
           </button>
@@ -808,7 +808,7 @@
               <input matInput placeholder="Match NONE of theese languages">
             </mat-form-field>
           </div>
-        </div>
+        </div> -->
         <div class="dropdown mb-1">
           <button class="btn btn-light dropdown-toggle" id="authorDD" data-toggle="dropdown">
             Author
@@ -1320,7 +1320,7 @@
                 </mat-checkbox>
               </div>
             </div>
-            <div class="dropdown mr-2">
+            <!-- <div class="dropdown mr-2">
               <button class="btn btn-light dropdown-toggle" type="button" id="propertyDD" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Property
@@ -1330,7 +1330,7 @@
                   {{p.name}}
                 </mat-checkbox>
               </div>
-            </div>
+            </div> -->
             <div class="dropdown mr-2">
               <button class="btn btn-light dropdown-toggle" type="button" id="tagsDD" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
@@ -1351,7 +1351,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <div class="dropdown mr-2">
+            <!-- <div class="dropdown mr-2">
               <button class="btn btn-light dropdown-toggle" type="button" id="localeDD" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Locale
@@ -1370,7 +1370,7 @@
                   <input matInput placeholder="Match NONE of theese languages">
                 </mat-form-field>
               </div>
-            </div>
+            </div> -->
             <div class="dropdown">
               <button class="btn btn-light dropdown-toggle" type="button" id="authorDD" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
